[project]
name = "hvac-ldm-mpc"
version = "0.1.0"
description = "Zone-level RC thermal model + MPC HVAC controller"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.13",
    "scikit-learn>=1.5",
    "lightgbm>=4.3",
    "matplotlib>=3.9",
    "pytest>=8.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ldm_mpc"]

[tool.pytest.ini_options]
testpaths = ["ldm_mpc/tests"]
python_files = ["test_*.py"]
